--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,18 @@ navbar-links:
    - CAWDU: "https://cawdu.com/"
    - NYU-AWDU: "https://nyuawdu.wordpress.com/"
    - Legacy UC-AWDU: "https://awdudotnet.wordpress.com/about/"
-  Resources:
+  UAW Webpages:
    - UAWD: "https://uawd.org/"
    - UAW 2865: "https://www.uaw2865.org/"
+   - UAW 5810: "https://uaw5810.org/"
    - SRU: "https://studentresearchersunited.org/"
+  Other UC Unions:
+   - AFSCME 3299: "https://afscme3299.org/"
+   - UPTE-CWA: "http://www.upte-cwa.org/"
+   - UC-AFT: "https://ucaft.org/"
+   - Teamsters 2010: "https://teamsters2010.org/"
+   - California Nurses Association: "https://www.nationalnursesunited.org/california-nurses-association"
+   
 
 # --- Logo --- #
 
