--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: UC-AWDU
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Bargaining Process: "bargaining_process"
   Platform: "platform"
   Get Involved: "getinvolved"
   Sibling AWDU:
