--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: UC-AWDU
 navbar-links:
   Contract Demands: "contract_demands"
   Bargaining Process: "bargaining_process"
-  Reformed Union: "uaw_reform"
+  Reforming the Local: "uaw_reform"
   Get Involved: "get_involved"
   Resources:
    - UAWD: "https://uawd.org/"
