--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navbar-links:
   Resources:
    - UAWD: "https://uawd.org/"
    - Sister AWDUs: "sister_awdu"
+   - Legacy Website: "https://awdudotnet.wordpress.com/about/"
 
 # --- Logo --- #
 
